--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "clsx": "^1.2.1",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "html-react-parser": "^3.0.16",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-intl": "^6.4.2",
     "swr": "^2.1.3",
     "typescript": "5.0.2"
   },
