--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^4.12.0",
     "@types/node": "18.15.11",
+    "@types/node-fetch": "^2.6.3",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.5",
@@ -19,6 +20,7 @@
     "eslint-config-next": "13.2.4",
     "html-react-parser": "^3.0.16",
     "next": "13.2.4",
+    "node-fetch": "^3.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
